--- a/booksearch/package.json
+++ b/booksearch/package.json
@@ -22,6 +22,8 @@
     "bootstrap": "^4.3.1",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "react-bootstrap": "^1.0.0-beta.10"
+    "mongoose": "^5.6.7",
+    "react-bootstrap": "^1.0.0-beta.10",
+    "react-router-dom": "^5.0.1"
   }
 }
