--- a/booksearch/package.json
+++ b/booksearch/package.json
@@ -25,6 +25,7 @@
     "if-env": "^1.0.4",
     "mongoose": "^5.6.7",
     "react-bootstrap": "^1.0.0-beta.10",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "socket.io": "^2.2.0"
   }
 }
